--- a/package.json
+++ b/package.json
@@ -20,10 +20,14 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
+    "formik": "^2.4.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.7.0",
-    "tailwindcss": "^4.1.11"
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss": "^4.1.11",
+    "uuid": "^11.1.0",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
